fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -523,9 +523,7 @@ html {
     header {
         width: 100%;
         height: 50em;
-    }
-    header img {
-        padding-top: 5em;
+        margin-top: 1em;
     }
     nav ul {
         margin: 0;
